--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Chicago Lobbyists - Blog
 ---
 
-{% for post in site.posts %}
+{% for post in paginator.posts %}
     <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
     
     <!-- AddThis Button BEGIN -->
@@ -23,6 +23,25 @@ title: Chicago Lobbyists - Blog
     <p>&nbsp;</p>
     <hr />
 {% endfor %}
+
+<!-- Pagination links -->
+<div class="pagination">
+  {% if paginator.previous_page %}
+  	{% if paginator.previous_page == 1 %}
+  		<a href="/" class="previous">Previous</a>
+  	{% else %}
+    	<a href="/page{{paginator.previous_page}}" class="previous">Previous</a>
+    {% endif %}
+  {% else %}
+    <span class="previous">Previous</span>
+  {% endif %}
+  <span class="page_number ">Page: {{paginator.page}} of {{paginator.total_pages}}</span>
+  {% if paginator.next_page %}
+    <a href="/page{{paginator.next_page}}" class="next ">Next</a>
+  {% else %}
+    <span class="next ">Next</span>
+  {% endif %}
+</div>
 
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
